--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "express-rate-limit": "^7.1.5",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.27.1",
+    "googleapis": "^128.0.0",
     "lucide-react": "^0.562.0",
+    "mongodb": "^6.2.0",
+    "nodemailer": "^6.9.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
