--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
